<resources>
    <string name="app_name">withub</string>
    <string name="home">홈</string>
    <string name="ranking">랭킹</string>
    <string name="commit">커밋</string>
    <string name="my_info">내정보</string>
    <string name="rank_4">4위:</string>
    <string name="rank_5">5위:</string>
    <string name="rank_6">6위:</string>
    <string name="rank_7">7위:</string>
    <string name="rank_8">8위:</string>
    <string name="rank_9">9위:</string>
    <string name="rank_10">10위:</string>
    <string-array name="ranking_title">
        <item>일간 커밋 횟수</item>
        <item>주간 커밋 횟수</item>
        <item>월간 커밋 횟수</item>
        <item>월간 연속 커밋 일수</item>
    </string-array>

    <string name="neam">%1$s 님</string>
    <string name="friend_recent_commit">%1$s님의 최근 커밋</string>
    <string name="friend_repository_list">%1$s님의 레포지토리 목록</string>
    <string name="graph_text">30일 커밋 그래프</string>
    <string name="my_commit_average">내 친구의 커밋 평균</string>
    <string name="my_area_average">내 지역의 커밋 평균</string>
    <string name="count">회</string>
    <string name="commit_count">%1$d회</string>
    <string name="vs_commit_text">이번 달 커밋 승자는?</string>
    <string name="VS">VS</string>
    <string name="slash">/</string>

    <string name="help">도움말</string>
    <string name="friend_list">친구목록</string>
    <string name="github_info_change">GitHub 정보 수정</string>
    <string name="change_nickname">닉네임 변경</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="tips_for_developer">개발자를 위한 팁</string>
    <string name="contributions_graph">깃허브 그래프</string>
    <string name="setting">설정</string>
    <string name="account">계정</string>
    <string name="logout">로그아웃</string>
    <string name="delete_account">회원탈퇴</string>

    <string name="opensource_licenses">오픈소스 라이센스</string>
    <string name="develop_info">개발자 정보</string>
    <string name="app_version">앱 버전</string>
    <string name="app_rule">이용약관</string>
    <string name="user_info_rule">개인정보 처리방침</string>

    <string name="area_select">지역선택</string>

    <string name="version">1.0.0</string>
</resources>