<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/point_color"
        android:gravity="center"
        android:fontFamily="@font/nanum_square_round_bold"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_title_text_size"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/account_activity_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="11dp"
        android:src="@drawable/ic_white_left_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <LinearLayout
        android:id="@+id/account_activity_logout_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/account_activity_logout_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="0.97"
            android:fontFamily="@font/nanum_square_round_regular"
            android:gravity="start|center"
            android:text="@string/logout"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="0.03"
            android:gravity="end"
            android:src="@drawable/ic_nav_right_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/account_activity_delete_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/account_activity_delete_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_activity_delete_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_activity_logout_view">

        <TextView
            android:id="@+id/account_activity_delete_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="0.97"
            android:fontFamily="@font/nanum_square_round_regular"
            android:gravity="start|center"
            android:text="@string/delete_account"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="0.03"
            android:gravity="end"
            android:src="@drawable/ic_nav_right_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/account_activity_delete_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/account_activity_delete_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>